\name{missMethylnews}
\title{missMethyl News}
\encoding{UTF-8}

\section{Version 1.5.1}{\itemize{

\item New gene set testing function gsameth() added, kegg testing functionality added to gometh().

}}

\section{Version 1.1.10}{\itemize{

\item This version of the package contains functions to perform SWAN normalisation, RUV normalisation and differential methylation analysis, differential variability analysis and gene ontology testing for the 450K array.

}}

\section{Version 1.1.3}{\itemize{

\item
Added the gometh function to perform gene ontology analysis.

}}

\section{Version 1.1.2}{\itemize{

\item
Added functions to perform RUV normalization and differential methylation analysis.

}}

\section{Version 0.99.9}{\itemize{

\item
This version of the package has all calculations in matrix formulation and handles nuisance parameters appropriately.

}}

\section{Version 0.99.7}{\itemize{

\item
Added new function, contrasts.varFit. 

}}


\section{Version 0.99.6}{\itemize{

\item
Modified getLeveneResiduals 

}}

\section{Version 0.99.5}{\itemize{

\item
Modified the varFit function to accept DGEList objects for differential variability testing for RNA-Seq data.

}}

\section{Version 0.99.4}{\itemize{

\item
First version of package contains functions to perform SWAN normalisation and differential variability analysis for DNA methylation data from Illumina's Infinium HumanMethylation450 beadchip.

}}